force-app/main/default/objects/nPortal__Tile__c/nPortal__Tile__c.object-meta.xml
<CustomObject>
    <description>--DEPRECATED-- This object will hold information to be displayed in the online application</description>
    <label>-D Tile</label>
    <nameField>
        <label>Tile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>-D Tiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>