force-app/main/default/objects/nPortal__Tile__c/fields/nPortal__Body__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Body__c</fullName>
    <description>This should contain the formatted body of the tile. It is completely customizable.</description>
    <label>Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>