force-app/main/default/objects/nPortal__Tile__c/fields/nPortal__Header__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Header__c</fullName>
    <description>The title field for the Tile</description>
    <label>Header</label>
    <length>80</length>
    <type>Text</type>
</CustomField>