force-app/main/default/objects/nPortal__Tile__c/fields/nPortal__Icon_Path__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Icon_Path__c</fullName>
    <description>This field should contain a text which corresponds to an sldc icon</description>
    <label>Icon Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>